added heartbeat implementation and tested it